--- a/package.json
+++ b/package.json
@@ -18,18 +18,27 @@
     },
     "preview": {
       "command": "vite preview --config vite.config.ts",
-      "dependencies": ["build"]
+      "dependencies": [
+        "build"
+      ]
     },
     "lint": {
       "command": "eslint apps/website/src"
     },
     "test": {
-      "dependencies": ["test:angular-to-jsx"]
+      "dependencies": [
+        "test:angular-to-jsx"
+      ]
     },
     "test:angular-to-jsx": {
       "command": "jest --config libs/angular-to-jsx/jest.config.ts",
-      "files": ["libs/angular-to-jsx/src/**/*.ts", "libs/angular-to-jsx/src/**/*.tsx"],
-      "output": ["coverage/libs/angular-to-jsx"]
+      "files": [
+        "libs/angular-to-jsx/src/**/*.ts",
+        "libs/angular-to-jsx/src/**/*.tsx"
+      ],
+      "output": [
+        "coverage/libs/angular-to-jsx"
+      ]
     }
   },
   "private": true,
@@ -56,14 +65,12 @@
     "uglify-js": "^3.19.3"
   },
   "devDependencies": {
-    "wireit": "^0.14.9",
     "@babel/core": "7.26.0",
     "@babel/preset-env": "7.26.0",
     "@babel/preset-react": "7.26.3",
     "@babel/preset-typescript": "7.26.0",
-    "@vitejs/plugin-react": "5.1.1",
-    "acorn": "4.0.13",
     "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/postcss": "4.1.18",
     "@testing-library/react": "16.1.0",
     "@types/babel__core": "^7.20.5",
     "@types/css-to-style": "1.2.2",
@@ -74,28 +81,31 @@
     "@types/react-dom": "19.0.1",
     "@typescript-eslint/eslint-plugin": "8.17.0",
     "@typescript-eslint/parser": "8.17.0",
+    "@vitejs/plugin-react": "5.1.1",
+    "acorn": "4.0.13",
     "autoprefixer": "10.4.20",
     "babel-jest": "29.7.0",
     "cypress": "14.1.0",
     "dotenv": "16.4.7",
     "eslint": "9.25.1",
-    "eslint-plugin-react-refresh": "0.4.24",
-    "globals": "16.5.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "4.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "0.4.24",
+    "globals": "16.5.0",
     "jest": "29.7.0",
-    "vite": "7.2.4",
     "postcss": "8.4.49",
     "prettier": "3.4.2",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "4.1.18",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.2",
-    "webpack": "5.97.1"
+    "vite": "7.2.4",
+    "webpack": "5.97.1",
+    "wireit": "^0.14.9"
   },
   "pnpm": {
     "onlyBuiltDependencies": [],
